# teacher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml  k8s.yml  plan.md
.github/workflows/: docker.yml
client/: index.html  package-lock.json  package.json
client/public/: manifest.json  sw.js
client/src/: App.vue  main.ts  router.ts
client/src/stores/: auth.ts  lesson.ts  profile.ts  vocab.ts  weakPoints.ts
client/src/views/: LessonHistoryView.vue  LessonView.vue  LoginView.vue  SettingsView.vue  VocabView.vue  WeakPointsView.vue
src/: auth.rs  lib.rs
src/api/: auth.rs  lesson.rs  lesson_history.rs  mod.rs  profile.rs  vocab.rs  weak_points.rs
src/entities/: auth_token.rs  lesson.rs  lesson_message.rs  mod.rs  user.rs  user_language_profile.rs  vocabulary.rs  weak_point.rs
src/mcp/: mod.rs
src/migration/: mod.rs
src/migration/m20240408_000001_init/: mod.rs
src/migration/m20260408_000002_auth/: mod.rs
src/migration/m20260408_000003_lessons/: mod.rs
src/migration/m20260408_000004_personal_note/: mod.rs
src/migration/m20260409_000005_lesson_messages/: mod.rs
src/migration/m20260409_000006_vocab_lesson_id/: mod.rs
